[tool.poetry]
name = "indexflow"
version = "0.1.0"
description = "A straightforward solution for quick content indexing using the IndexNow protocol."
authors = ["fedorov0av <fedorov0av@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
